--- a/css/services.css
+++ b/css/services.css
@@ -783,7 +783,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("https://res.cloudinary.com/dl4hjr1p2/image/upload/v1762550333/Doctors_nlnynf.png");
+  background: url("https://res.cloudinary.com/dl4hjr1p2/image/upload/v1762550338/undefined_icuzez.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
